Time: 31 ms (11.08%), Space: 136.8 MB (59.81%) - LeetHub